--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
-vueapp/.DS_Store
-vueapp/node_modules
-vueapp/dist
+app/.DS_Store
+app/node_modules
+app/dist
 
 # local env files
-vueapp/.env.local
-vueapp/.env.*.local
+app/.env.local
+app/.env.*.local
 
 # Log files
-vueapp/npm-debug.log*
-vueapp/yarn-debug.log*
-vueapp/yarn-error.log*
+app/npm-debug.log*
+app/yarn-debug.log*
+app/yarn-error.log*
 
 # Editor directories and files
-vueapp/.idea
-vueapp/.vscode
+app/.idea
+app/.vscode
 *.suo
 *.ntvs*
 *.njsproj
