--- a/app/package.json
+++ b/app/package.json
@@ -2,10 +2,18 @@
   "name": "covidpoem",
   "version": "1.0.0",
   "description": "a text-based covid tracker for chile.",
-  "main": "/src/main.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "Nikolai Kozak",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  }
 }
