--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "jquery": "^3.5.1",
     "micromodal": "^0.4.6"
   }
