--- a/app/package.json
+++ b/app/package.json
@@ -5,17 +5,19 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "start": "snowpack start",
+    "build": "snowpack build"
   },
   "author": "Nikolai Kozak",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@parcel/transformer-webmanifest": "^2.7.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "parcel": "^2.7.0",
+    "process": "^0.11.10"
   },
   "dependencies": {
     "axios": "^0.19.2",
